update old blog content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,22 +3,30 @@
 		<ul class="Navbar-list">
 			<li>
 				<a class="Navbar-link Navbar-link--title" href="{{ site.baseurl }}/">
-					Morgan Carter<span class="below-sm-hidden">’s Portfolio</span>
+					<span>Morgan Carter<span class="below-sm-hidden">’s Portfolio</span></span>
 				</a>
 			</li>
 		</ul>
 		<ul class="Navbar-list">
 			<li>
-				<a class="Navbar-link {% if page.siteNav == 'home' %}now-active{% endif %} below-md-hidden" href="{{ site.baseurl }}/">About</a>
+				<a class="Navbar-link {% if page.siteNav == 'home' %}now-active{% endif %} below-md-hidden" href="{{ site.baseurl }}/">
+					<span>About</span>
+				</a>
 			</li>
 			<li>
-				<a class="Navbar-link {% if page.siteNav == 'work' %}now-active{% endif %}" href="{{ site.baseurl }}/work/">Work</a>
+				<a class="Navbar-link {% if page.siteNav == 'work' %}now-active{% endif %}" href="{{ site.baseurl }}/work/">
+					<span>Work</span>
+				</a>
 			</li>
 			<li>
-				<a class="Navbar-link {% if page.siteNav == 'blog' %}now-active{% endif %}" href="{{ site.baseurl }}/design-solutions/">Writing</a>
+				<a class="Navbar-link {% if page.siteNav == 'blog' %}now-active{% endif %}" href="{{ site.baseurl }}/design-solutions/">
+					<span>Writing</span>
+				</a>
 			</li>
 			<li>
-				<a class="Navbar-link Navbar-link--contact" href="{{ site.baseurl }}/contact/">Contact Me</a>
+				<a class="Navbar-link Navbar-link--contact" href="{{ site.baseurl }}/contact/">
+					<span>Contact Me</span>
+				</a>
 			</li>
 		</ul>
 		<div class="below-lg-hidden"></div>
