--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,14 @@ layout: default
 body-id: work
 ---
 
-<div class="Page Page--split">
-	<div class="container Page-container">
-		<div class="Page-hero">
+<div class="Page">
+	<div class="container container--sm">
+		<section class="Page-hero">
 			<h1>{{ page.title }}</h1>
-		</div>
-		<div class="Page-content">
+		</section>
+		<article class="Page-content Essay Essay--blog">
 			{{ content }}
-		</div>
+		</article>
 	</div>
 </div>
 
