--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 
-
 <div class="Page">
-	<div class="container">
+	<div class="container container--{{ page.container_size }}">
 		<section class="Page-hero">
 			<h1>{{ page.title }}</h1>
 		</section>
