--- a/_sass/1_core/typography.scss
+++ b/_sass/1_core/typography.scss
@@ -46,8 +46,8 @@ h3,
 }
 h4,
 .h4 {
-	font-size: 1.5rem;
-	font-weight: 500;
+	font-size: 1.25rem;
+	font-weight: 600;
 }
 h5,
 .h5 {
@@ -110,6 +110,6 @@ blockquote {
 	}
 	h4,
 	.h4 {
-		font-size: 32px;
+		// font-size: 1.px;
 	}
 }
