--- a/_sass/3_modules/Navbar.scss
+++ b/_sass/3_modules/Navbar.scss
@@ -39,15 +39,21 @@
 	color: $text-dark;
 	text-decoration: none;
 	font-weight: 500;
-	padding-left: 6px;
-	padding-right: 6px;
+	padding: 0;
+	> span {
+		display: block;
+		padding: 1px 6px 2px;
+	}
 	&.now-active {
 		opacity: 0.6;
 	}
 	&:hover {
-		background: rgba($text-dark, 0.1);
+		background: none;
+		> span {
+			background: rgba($text-dark, 0.1);
+		}
 	}
-	&:active {
+	&:active > span {
 		transform: scale(0.9);
 	}
 }
@@ -57,7 +63,7 @@
 .Navbar-link--contact {
 	color: $blue;
 	font-weight: 700;
-	&:hover {
+	&:hover > span {
 		background: rgba($blue, 0.1);
 	}
 }
