add instantClick plugin

--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -26,6 +26,7 @@
 @import '2_components/carousel';
 @import '2_components/buttons';
 @import '2_components/inputs';
+@import '2_components/instantClick';
 
 // // Plugins
 // @import 'plugins/instantClick';
