--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -19,6 +19,7 @@ $red:						#b73636;
 
 $text-dark:					#182235;
 $text-dark:					#333;
+$background:				#e1ddd4;
 $text-muted:				#818CA2;
 
 // $info:						$blue;
@@ -33,7 +34,7 @@ $text-muted:				#818CA2;
 // $colors:					$blue, $green, $orange, $red, $yellow, $purple;
 
 // Typography
-$font-header:				"Ogg-Web", "Ogg";
+$font-header:				"Canela", "Ogg-Web", "Ogg";
 $font-sans:					"GT America Trial";
 $font-serif:				"Domaine Text Test", "Ivar-Text-Web", "DEMO", "Marat-Web";
 $font-serif-header:			"Domaine Display Test", "Ivar-Headline-Web", "DEMO", "Marat-Web";
