--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="Navbar">
+<nav class="Navbar" style="{{page.hero_css}}">
 	<div class="container Navbar-container">
 		<ul class="Navbar-list">
 			<li>
@@ -25,7 +25,7 @@
 			</li>
 			<li>
 				<a class="Navbar-link Navbar-link--contact" href="{{ site.baseurl }}/contact/">
-					<span>Contact Me</span>
+					<span>Contact</span>
 				</a>
 			</li>
 		</ul>
