--- a/_sass/3_modules/Navbar.scss
+++ b/_sass/3_modules/Navbar.scss
@@ -36,7 +36,7 @@
 }
 .Navbar-link {
 	display: block;
-	color: $text-dark;
+	color: inherit;
 	text-decoration: none;
 	font-weight: 500;
 	padding: 0;
@@ -61,9 +61,7 @@
 	font-weight: bold;
 }
 .Navbar-link--contact {
-	color: $blue;
 	font-weight: 700;
 	&:hover > span {
-		background: rgba($blue, 0.1);
 	}
 }
