--- a/_sass/2_components/carousel.scss
+++ b/_sass/2_components/carousel.scss
@@ -8,11 +8,16 @@
 	position: relative;
 }
 
+.carousel-frame {
+	max-width: $container-sm;
+	margin-left: auto;
+	margin-right: auto;
+}
 .carousel-listItem {
 	position: relative;
 	float: left;
-	// width: 640px;
 	width: calc(100vw - 2rem);
+	margin: 0 !important;
 	figcaption {
 		display: none;
 	}
@@ -76,7 +81,7 @@
 		width: calc(100vw - 3rem);
 	}
 }
-@media (min-width: $media-lg) {
+@media (min-width: 1408px) {
 	.carousel-listItem {
 		width: 640px;
 	}
