--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,17 +13,17 @@
 					<span>About</span>
 				</a>
 			</li>
-			<li>
+			<li class="m-left--sm when-md-m-left--lg">
 				<a class="Navbar-link {% if page.siteNav == 'work' %}now-active{% endif %}" href="{{ site.baseurl }}/work/">
 					<span>Work</span>
 				</a>
 			</li>
-			<li>
+			<li class="m-left--sm when-md-m-left--lg">
 				<a class="Navbar-link {% if page.siteNav == 'blog' %}now-active{% endif %}" href="{{ site.baseurl }}/design-solutions/">
 					<span>Writing</span>
 				</a>
 			</li>
-			<li>
+			<li class="m-left--sm when-md-m-left--lg">
 				<a class="Navbar-link Navbar-link--contact" href="{{ site.baseurl }}/contact/">
 					<span>Contact</span>
 				</a>
