--- a/_sass/2_components/buttons.scss
+++ b/_sass/2_components/buttons.scss
@@ -58,6 +58,11 @@
 		transition: none;
 	}
 }
+.button--mobile {
+	font-weight: 600;
+	font-style: italic;
+	font-family: $font-system;
+}
 .button--inverted {
 	color: $background;
 	&:before,
