--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -26,6 +26,7 @@
 @import '2_components/carousel';
 @import '2_components/buttons';
 @import '2_components/inputs';
+@import '2_components/media';
 @import '2_components/instantClick';
 
 // // Plugins
@@ -35,8 +36,7 @@
 @import '3_modules/Page';
 @import '3_modules/Navbar';
 @import '3_modules/Essay';
-@import '3_modules/Work';
-@import '3_modules/Blog';
+@import '3_modules/Post';
 // @import 'modules/form';
 // @import 'modules/heroText';
 // @import 'modules/home';
