--- a/_sass/1_core/grid.scss
+++ b/_sass/1_core/grid.scss
@@ -496,14 +496,6 @@
 	}
 }
 @media (min-width: $media-lg) {
-	.grid {
-		margin-left: -$spacing-lg;
-		margin-right: -$spacing-lg;
-	}
-	.grid-item {
-		padding-left: $spacing-lg;
-		padding-right: $spacing-lg;
-	}
 	.when-lg-1, .when-lg-2, .when-lg-3, .when-lg-4, .when-lg-5, .when-lg-6, .when-lg-7, .when-lg-8, .when-lg-9, .when-lg-10, .when-lg-11, .when-lg-12 {
 		float: left;
 	}
@@ -659,6 +651,16 @@
 	}
 	.when-lg-offset-0 {
 		margin-left: 0%;
+	}
+}
+@media (min-width: $media-xl) {
+	.grid {
+		margin-left: -$spacing-lg;
+		margin-right: -$spacing-lg;
+	}
+	.grid-item {
+		padding-left: $spacing-lg;
+		padding-right: $spacing-lg;
 	}
 }
 .grid:before,
