--- a/_sass/1_core/typography.scss
+++ b/_sass/1_core/typography.scss
@@ -51,11 +51,14 @@ h4,
 }
 h5,
 .h5 {
-	font-size: 1rem;
-	font-weight: 600;
+	font-size: inherit;
+	font-weight: 500;
 }
 .text-lg {
 	font-size: $fontSize-xl;
+}
+.text-sm {
+	font-size: $fontSize-sm;
 }
 // .text-xl {
 // 	font-size: $fontSize-xl;
@@ -66,11 +69,11 @@ p {
 	&:first-child {
 		margin-top: 0;
 	}
-	em {
-		font-style: italic;
-		font-family: $font-serif;
-		letter-spacing: $letterSpacing-condensed;
-	}
+}
+em {
+	font-style: italic;
+	font-family: $font-serif;
+	letter-spacing: $letterSpacing-condensed;
 }
 
 blockquote {
@@ -111,5 +114,8 @@ blockquote {
 	h4,
 	.h4 {
 		// font-size: 1.px;
+	}
+	.text-sm {
+		font-size: $fontSize-md;
 	}
 }
