--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -19,7 +19,7 @@ $red:						#b73636;
 
 $text-dark:					#182235;
 $text-dark:					#333;
-$background:				#e1ddd4;
+$background:				#E0DBD5;
 $text-muted:				#818CA2;
 
 // $info:						$blue;
@@ -35,12 +35,13 @@ $text-muted:				#818CA2;
 
 // Typography
 $font-header:				"Canela", "Ogg-Web", "Ogg";
-$font-sans:					"GT America Trial";
-$font-serif:				"Domaine Text Test", "Ivar-Text-Web", "DEMO", "Marat-Web";
-$font-serif-header:			"Domaine Display Test", "Ivar-Headline-Web", "DEMO", "Marat-Web";
+$font-sans:					"GT-America-Web";
+$font-serif:				"Domaine-Text-Web", "Ivar-Text-Web", "DEMO", "Marat-Web";
+$font-serif-header:			"Domaine-Display-Web", "Ivar-Headline-Web", "DEMO", "Marat-Web";
 $font-mono:					"Vulf Mono";
 $font-system:               -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
 
+$fontSize-xs:				12px;
 $fontSize-sm:				14px;
 $fontSize-md:				16px;
 $fontSize-lg:				18px;
@@ -77,8 +78,8 @@ $media-md:                  768px;
 $media-sm:                  568px;
 $media-xs:                  400px;
 $media-xxs:                 350px;
-$media-names:               'xs', 'sm', 'md', 'lg', 'xl';
-$media-amounts:             $media-xs, $media-sm, $media-md, $media-lg, $media-xl;
+$media-names:               'xs', 'sm', 'md', 'lg', 'laptop', 'xl';
+$media-amounts:             $media-xs, $media-sm, $media-md, $media-lg, $media-laptop, $media-xl;
 
 $container-xl:              1600px;
 $container-lg:              1344px;
