--- a/_sass/3_modules/Essay.scss
+++ b/_sass/3_modules/Essay.scss
@@ -22,10 +22,11 @@
 	}
 }
 .Essay--blog {
-	h2,
-	h3 {
-		margin-top: 1em;
+	h2 {
+		font-size: 2rem;
 	}
+	h2,
+	h3,
 	h4,
 	h5 {
 		margin-top: 1.5em;
