include footer, add “related work” links

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="Page">
+<div class="whitespace--sm">
 	<div class="container container--{{ page.container_size }}">
 		<section class="Page-hero">
 			<h1>{{ page.title }}</h1>
