--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 body-id: work
 ---
 
-<div class="Page">
+<div class="whitespace--sm">
 	<div class="container container--sm">
 		<section class="Page-hero">
 			<h1>{{ page.title }}</h1>
