--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -35,6 +35,7 @@
 // // Modules
 @import '3_modules/Page';
 @import '3_modules/Navbar';
+@import '3_modules/Footer';
 @import '3_modules/Essay';
 @import '3_modules/Post';
 // @import 'modules/form';
