--- a/_sass/3_modules/Page.scss
+++ b/_sass/3_modules/Page.scss
@@ -1,5 +1,5 @@
 .Page {
-	padding: $spacing-sm;
+	min-height: calc(100vh - 392px);
 }
 .Page-hero {
 	margin-top: $spacing-lg;
@@ -47,7 +47,6 @@
 
 @media (min-width: $media-md) {
 	.Page {
-		padding: $spacing-md;
 		li {
 			margin-left: 0;
 		}
@@ -63,9 +62,6 @@
 }
 
 @media (min-width: $media-lg) {
-	.Page {
-		padding: $spacing-lg;
-	}
 	.Page-section {
 		margin-top: 8rem;
 		padding-top: 8rem;
