add surgemaker case study, add canela fonts (temp), add scrollTo JS, remove masonry transition

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,15 @@
-<footer class="Footer whitespace-top--lg">
+<footer class="Footer">
 	<div class="whitespace--sm whitespace-top--md whitespace-bottom--md text-center bg-black color-bg">
 		<div class="container">
 			<div class="Footer-links">
-				<a href="https://dribbble.com/morgoe">
-					<img src="/assets/icon/dribbble.svg">
+				<a href="mailto:hello@morgancarter.com.au">
+					<img src="/assets/icon/email.svg">
 				</a>
 				<a class="m-left--sm" href="tel:+61426395232">
 					<img src="/assets/icon/phone.svg">
 				</a>
-				<a class="m-left--sm" href="mailto:hello@morgancarter.com.au">
-					<img src="/assets/icon/email.svg">
+				<a class="m-left--sm" href="https://dribbble.com/morgoe">
+					<img src="/assets/icon/dribbble.svg">
 				</a>
 			</div>
 
