--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 				</a>
 			</li>
 			<li class="m-left--sm when-md-m-left--lg">
-				<a class="Navbar-link Navbar-link--contact" href="{{ site.baseurl }}/contact/">
+				<a class="Navbar-link Navbar-link--contact  {% if page.siteNav == 'contact' %}now-active{% endif %}" href="{{ site.baseurl }}/contact/">
 					<span>Contact</span>
 				</a>
 			</li>
