--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -34,7 +34,7 @@ $text-muted:				#818CA2;
 // $colors:					$blue, $green, $orange, $red, $yellow, $purple;
 
 // Typography
-$font-header:				"Canela", "Ogg-Web", "Ogg";
+$font-header:				"Canela-Web", "Canela", "Ogg-Web", "Ogg";
 $font-sans:					"GT-America-Web";
 $font-serif:				"Domaine-Text-Web", "Ivar-Text-Web", "DEMO", "Marat-Web";
 $font-serif-header:			"Domaine-Display-Web", "Ivar-Headline-Web", "DEMO", "Marat-Web";
