--- a/_sass/4_utilities/color.scss
+++ b/_sass/4_utilities/color.scss
@@ -11,6 +11,9 @@
 .bg-black {
 	background: $text-dark !important;
 }
+.bg-light {
+	background: rgba($text-dark, 0.1) !important;
+}
 .bg-green {
 	background: $green !important;
 }
