--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
 	<!-- Social Sharing -->
 	{% if page.title %}
-		<title>{{ page.title }} · {{ site.title }}</title>
+		<title>{{ page.title }} — {{ site.title }}</title>
 		<meta name="twitter:title"       content="{{ page.title }} — {{ site.title }}">
 		<meta property="og:title"        content="{{ page.title }} — {{ site.title }}">
 	{% else %}
