--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,13 +2,15 @@
 layout: default
 ---
 
-<div class="whitespace--sm">
-	<div class="container container--{{ page.container_size }}">
-		<section class="Page-hero">
-			<h1>{{ page.title }}</h1>
-		</section>
-		<article class="Page-content">
-			{{ content }}
-		</article>
+<div class="Page">
+	<div class="whitespace--sm whitespace-bottom--md">
+		<div class="container container--{{ page.container_size }}">
+			<section class="Page-hero">
+				<h1>{{ page.title }}</h1>
+			</section>
+			<article class="Page-content">
+				{{ content }}
+			</article>
+		</div>
 	</div>
 </div>
