--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,16 @@ layout: default
 body-id: work
 ---
 
-<div class="whitespace--sm">
-	<div class="container container--sm">
-		<section class="Page-hero">
-			<h1>{{ page.title }}</h1>
-		</section>
-		<article class="Page-content Essay Essay--blog">
-			{{ content }}
-		</article>
+<div class="Page">
+	<div class="whitespace--sm">
+		<div class="container container--sm">
+			<section class="Page-hero">
+				<h1>{{ page.title }}</h1>
+			</section>
+			<article class="Page-content Essay Essay--blog">
+				{{ content }}
+			</article>
+		</div>
 	</div>
 </div>
 
