--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -13,8 +13,9 @@ body-id: work
 			</section>
 		</div>
 	</section>
-	<section class="whitespace--sm whitespace-top--md">
+	<section class="whitespace--sm whitespace-top--md whitespace-bottom--md">
 		<div class="container">
+			{% unless page.hide_subhero %}
 			<section class="Page-subhero">
 				<div class="grid">
 					<div class="grid-item when-lg-6">
@@ -39,7 +40,7 @@ body-id: work
 							
 							{% for link in page.jumpLinks %}
 								<li>
-									<a href="#{{ link.url }}">
+									<a class="js-scrollTo" href="#{{ link.url }}">
 										<img class="icon" src="/assets/icon/{{link.icon}}.svg">
 										<span>{{ link.text }}</span>
 									</a>
@@ -49,12 +50,18 @@ body-id: work
 					</div>
 				</div>
 			</section>
+			{% endunless %}
 
 			<article class="Page-content Essay">
 				{{ content }}
 			</article>
 			
-			<section class="Page-section">
+		</div>
+	</section>
+
+	<section class="whitespace--sm whitespace-top--md bg-light">
+		<div class="container">
+			<section class="">
 				<header class="grid align-center">
 					<h2 class="grid-item when-sm-8">Browse more work</h2>
 					<div class="grid-item when-sm-4 text-right below-sm-hidden">
@@ -76,20 +83,6 @@ body-id: work
 					{% endfor %}
 				</ul>
 			</section>
-			<!-- {% if page.nextOne_link %}
-				<a class="btn-footer is-hasImage" href="/work/{{page.nextOne_link}}">
-					<div class="btn-footer-image" style="background-image: url(/assets/images/work/{{page.nextOne_img}})"></div>
-					<span class="btn" data-text="Next"></span>
-				</a>
-			{% elsif page.siteNav == 'work' %}
-				<a class="btn-footer" href="/work/">
-					<span class="btn is-noImage" data-text="See more work"></span>
-				</a>
-			{% elsif page.siteNav == 'blog' %}
-				<a class="btn-footer" href="/design-solutions/">
-					<span class="btn is-noImage" data-text="Read more posts"></span>
-				</a>
-			{% endif %} -->
 		</div>
 	</section>
 </div>
