add purchased fonts GT America and Domaine

--- a/_sass/4_utilities/font.scss
+++ b/_sass/4_utilities/font.scss
@@ -1,7 +1,13 @@
 .font-serif {
 	font-family: $font-serif;
-	h2 & { 
+	font-style: italic;
+	font-weight: 400;
+	h2 &,
+	h3 &,
+	h4 & { 
 		font-family: $font-serif-header;
+		font-style: normal;
+		font-weight: 500;
 	}
 }
 .font-regular {
