--- a/_sass/1_core/fonts.scss
+++ b/_sass/1_core/fonts.scss
@@ -1,41 +1,33 @@
-// Marat Sans Regular, Italic, Bold: $80/yr for 10k/mo or $180 once for 50k/mo
-// Marat Medium: $25/yr for 10k/mo or $60 once for 50k/mo
-// Ogg: $50 once for 10k/mo
-
-// 365 over 3 years
-// or
-// 290 over 3 years for 10k/mo
-// 340 over 3 years for 50k/mo
-
-// Ivar: $60 per weight: at least 3-4 weights. $240
-// Ogg $50 once
-// GT America: $65 per weight, at least 2-3 weights: $150
-// Total: AU$315—440
-
 @font-face{
-    font-family: "Marat-Sans-Web";
+    font-family: "GT-America-Web";
     font-style: normal;
     font-weight: 400;
-    src: url('/assets/fonts/Marat-Sans-Regular.woff2') format('woff2');
+    src: url('/assets/fonts/GT-America-Standard-Regular.woff2') format('woff2'),
+         url('/assets/fonts/GT-America-Standard-Regular.woff') format('woff');
 }
 @font-face{
-    font-family: "Marat-Sans-Web";
+    font-family: "GT-America-Web";
     font-style: normal;
     font-weight: 600;
-    src: url('/assets/fonts/Marat-Sans-Bold.woff2') format('woff2');
+    src: url('/assets/fonts/GT-America-Standard-Medium.woff2') format('woff2'),
+         url('/assets/fonts/GT-America-Standard-Medium.woff') format('woff');
 }
-@font-face{
-    font-family: "Marat-Web";
-    font-style: normal;
+@font-face {
+    font-family: 'Domaine-Display-Web';
     font-weight: 500;
-    src: url('/assets/fonts/Marat-Medium.woff') format('woff');
-}
-@font-face{
-    font-family: "Ogg-Web";
     font-style: normal;
-    font-weight: 600;
-    src: url('/assets/fonts/Ogg.woff') format('woff');
+    src: url('/assets/fonts/DomaineDisplayWeb-Medium.woff2') format('woff2'),
+         url('/assets/fonts/DomaineDisplayWeb-Medium.woff') format('woff');
 }
+@font-face {
+    font-family: 'Domaine-Text-Web';
+    font-weight: 400;
+    font-style: italic;
+    src: url('/assets/fonts/DomaineTextWeb-RegularItalic.woff2') format('woff2'),
+         url('/assets/fonts/DomaineTextWeb-RegularItalic.woff') format('woff');
+}
+
+// Not purchased yet:
 @font-face{
     font-family: "Canela-Web";
     font-style: normal;
@@ -48,105 +40,5 @@
     font-weight: 200;
     src: url('/assets/fonts/Canela-Light-Reduced.woff') format('woff');
 }
-@font-face{
-    font-family: "Domaine-Display-Web";
-    font-style: normal;
-    font-weight: 400;
-    src: url('/assets/fonts/Domaine_Display_Regular.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Domaine-Display-Web";
-    font-style: normal;
-    font-weight: 500;
-    src: url('/assets/fonts/Domaine_Display_Medium.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Domaine-Display-Web";
-    font-style: normal;
-    font-weight: 600;
-    src: url('/assets/fonts/Domaine_Display_Semibold.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Domaine-Text-Web";
-    font-style: italic;
-    font-weight: 400;
-    src: url('/assets/fonts/Domaine_Text_Regular_Italic.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Domaine-Sans-Text-Web";
-    font-style: italic;
-    font-weight: 500;
-    src: url('/assets/fonts/Domaine_Sans_Text_Medium_Italic.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Pitch-Web";
-    font-style: italic;
-    font-weight: 500;
-    src: url('/assets/fonts/Pitch_Medium_Italic.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Pitch-Sans-Web";
-    font-style: italic;
-    font-weight: 500;
-    src: url('/assets/fonts/Pitch_Sans_Medium_Italic.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Pitch-Sans-Web";
-    font-style: normal;
-    font-weight: 600;
-    src: url('/assets/fonts/Pitch_Sans_Semibold.woff2') format('woff2');
-}
-@font-face{
-    font-family: "GT-America-Web";
-    font-style: normal;
-    font-weight: 400;
-    src: url('/assets/fonts/GT-America-Standard-Regular.woff2') format('woff2');
-}
-@font-face{
-    font-family: "GT-America-Web";
-    font-style: normal;
-    font-weight: 500;
-    src: url('/assets/fonts/GT-America-Standard-Medium.woff2') format('woff2');
-}
-@font-face{
-    font-family: "GT-America-Web";
-    font-style: normal;
-    font-weight: 700;
-    src: url('/assets/fonts/GT-America-Standard-Bold.woff2') format('woff2');
-}
-@font-face{
-    font-family: "GT-America-Mono-Web";
-    font-style: normal;
-    font-weight: 400;
-    src: url('/assets/fonts/GT-America-Mono-Regular.woff2') format('woff2');
-}
-@font-face{
-    font-family: "GT-America-Mono-Web";
-    font-style: normal;
-    font-weight: 700;
-    src: url('/assets/fonts/GT-America-Mono-Bold.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Ivar-Headline-Web";
-    font-style: normal;
-    font-weight: 400;
-    src: url('/assets/fonts/IvarHeadline-Regular.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Ivar-Headline-Web";
-    font-style: normal;
-    font-weight: 500;
-    src: url('/assets/fonts/IvarHeadline-Medium.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Ivar-Headline-Web";
-    font-style: normal;
-    font-weight: 600;
-    src: url('/assets/fonts/IvarHeadline-SemiBold.woff2') format('woff2');
-}
-@font-face{
-    font-family: "Ivar-Headline-Web";
-    font-style: normal;
-    font-weight: 700;
-    src: url('/assets/fonts/IvarHeadline-Bold.woff2') format('woff2');
-}
+
+// TODO: Make Vulf arrows into SVGs
