--- a/_sass/1_core/typography.scss
+++ b/_sass/1_core/typography.scss
@@ -32,24 +32,28 @@ h2,
 .h2 {
 	font-family: $font-sans;
 	font-size: 2rem;
-	font-weight: 500;
+	font-weight: 600;
 }
 h3,
 .h3 {
 	font-family: $font-serif-header;
-	font-style: italic;
 	font-size: 1.5rem;
+	font-weight: 500;
+}
+.h3--alt {
+	font-family: $font-serif;
 	font-weight: 400;
+	font-style: italic;
 }
 h4,
 .h4 {
 	font-size: 1.25rem;
-	font-weight: 500;
+	font-weight: 600;
 }
 h5,
 .h5 {
 	font-size: inherit;
-	font-weight: 500;
+	font-weight: 600;
 }
 .text-lg {
 	font-size: $fontSize-xl;
@@ -66,6 +70,9 @@ p {
 	&:first-child {
 		margin-top: 0;
 	}
+}
+strong {
+	font-weight: 600;
 }
 em {
 	font-style: italic;
