--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -34,10 +34,10 @@ $text-muted:				#818CA2;
 // $colors:					$blue, $green, $orange, $red, $yellow, $purple;
 
 // Typography
-$font-header:				"Canela-Web", "Canela", "Ogg-Web", "Ogg";
-$font-sans:					"GT-America-Web";
-$font-serif:				"Domaine-Text-Web", "Ivar-Text-Web", "DEMO", "Marat-Web";
-$font-serif-header:			"Domaine-Display-Web", "Ivar-Headline-Web", "DEMO", "Marat-Web";
+$font-header:				"Canela-Web", "Canela", "Domaine-Display-Web", "Georgia", serif;
+$font-sans:					"GT-America-Web", -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+$font-serif:				"Domaine-Text-Web", "Georgia", serif;
+$font-serif-header:			"Domaine-Display-Web", "Georgia", serif;
 $font-mono:					"Vulf Mono";
 $font-system:               -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
 
@@ -55,7 +55,7 @@ $letterSpacing-wide:        0.01em;
 $letterSpacing-condensed:   -0.01em;
 
 // Layout
-$spacing-xl:                2.5rem;
+$spacing-xl:                3rem;
 $spacing-lg:                2rem;
 $spacing-md:                1.5rem;
 $spacing-sm:                1rem;
