add final hero images

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -9,7 +9,7 @@ body-id: work
 			<section class="Page-hero">
 				<h1>{{ page.hero_title }}</h1>
 
-				<img src="{{ page.hero_image }}" class="Page-heroImage">
+				<img src="{{ page.hero_image }}" class="Page-heroImage" width="{{ page.hero_image_width }}">
 			</section>
 		</div>
 	</section>
