--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,34 +1,36 @@
-<nav class="Navbar" style="{{page.hero_css}}">
-	<div class="container Navbar-container">
-		<ul class="Navbar-list">
-			<li>
-				<a class="Navbar-link Navbar-link--title" href="{{ site.baseurl }}/">
-					<span>Morgan Carter<span class="below-sm-hidden">’s Portfolio</span></span>
-				</a>
-			</li>
-		</ul>
-		<ul class="Navbar-list">
-			<li>
-				<a class="Navbar-link {% if page.siteNav == 'home' %}now-active{% endif %} below-md-hidden" href="{{ site.baseurl }}/">
-					<span>About</span>
-				</a>
-			</li>
-			<li class="m-left--sm when-md-m-left--lg">
-				<a class="Navbar-link {% if page.siteNav == 'work' %}now-active{% endif %}" href="{{ site.baseurl }}/work/">
-					<span>Work</span>
-				</a>
-			</li>
-			<li class="m-left--sm when-md-m-left--lg">
-				<a class="Navbar-link {% if page.siteNav == 'blog' %}now-active{% endif %}" href="{{ site.baseurl }}/design-solutions/">
-					<span>Writing</span>
-				</a>
-			</li>
-			<li class="m-left--sm when-md-m-left--lg">
-				<a class="Navbar-link Navbar-link--contact  {% if page.siteNav == 'contact' %}now-active{% endif %}" href="{{ site.baseurl }}/contact/">
-					<span>Contact</span>
-				</a>
-			</li>
-		</ul>
-		<div class="below-lg-hidden"></div>
+<nav class="Navbar whitespace-left--sm whitespace-right--sm" style="{{page.hero_css}}">
+	<div class="Navbar-negativeMargins">
+		<div class="container Navbar-container">
+			<ul class="Navbar-list">
+				<li>
+					<a class="Navbar-link Navbar-link--title" href="{{ site.baseurl }}/">
+						<span>Morgan Carter<span class="below-sm-hidden">’s Portfolio</span></span>
+					</a>
+				</li>
+			</ul>
+			<ul class="Navbar-list">
+				<li>
+					<a class="Navbar-link {% if page.siteNav == 'home' %}now-active{% endif %} below-md-hidden" href="{{ site.baseurl }}/">
+						<span>About</span>
+					</a>
+				</li>
+				<li class="when-sm-m-left--sm when-md-m-left--lg">
+					<a class="Navbar-link {% if page.siteNav == 'work' %}now-active{% endif %}" href="{{ site.baseurl }}/work/">
+						<span>Work</span>
+					</a>
+				</li>
+				<li class="when-sm-m-left--sm when-md-m-left--lg">
+					<a class="Navbar-link {% if page.siteNav == 'blog' %}now-active{% endif %}" href="{{ site.baseurl }}/design-solutions/">
+						<span>Writing</span>
+					</a>
+				</li>
+				<li class="when-sm-m-left--sm when-md-m-left--lg">
+					<a class="Navbar-link Navbar-link--contact  {% if page.siteNav == 'contact' %}now-active{% endif %}" href="{{ site.baseurl }}/contact/">
+						<span>Contact</span>
+					</a>
+				</li>
+			</ul>
+			<div class="below-lg-hidden"></div>
+		</div>
 	</div>
 </nav>
