--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,9 +1,6 @@
 <figure class="video-figure {% if include.style %}figure--{{include.style}}{% endif %}">
 	<div class="figure-content">
-		<video loop muted autoplay playsinline {% if include.style %}width="{{include.width}}"{% endif %} {% if include.style %}height="{{include.height}}"{% endif %} >
-			<!-- <source data-src="{{ include.url }}" type="video/mp4"> -->
-			<source src="{{ include.url }}" type="video/mp4">
-		</video>
+		<div class="video" data-src="{{ include.url }}"></div>
 		<div class="video-controls">
 			<div class="video-scrubber">
 				<div class="video-scrubbed"></div>
