--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -27,6 +27,7 @@
 @import '2_components/buttons';
 @import '2_components/inputs';
 @import '2_components/media';
+@import '2_components/loading';
 @import '2_components/instantClick';
 
 // // Plugins
