--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,6 +1,6 @@
 <figure class="video-figure {% if include.style %}figure--{{include.style}}{% endif %}">
 	<div class="figure-content">
-		<div class="video" data-src="{{ include.url }}"></div>
+		<div class="video now-loading" data-src="{{ include.url }}"></div>
 		<div class="video-controls">
 			<div class="video-scrubber">
 				<div class="video-scrubbed"></div>
