--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -6,41 +6,51 @@
 					{% if include.image1 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image1 }}">
-							<figcaption>
-								<p class="js-carouselItemCaption">{{ include.image1_description }}</p>
-							</figcaption>
+							{% if include.image1_description %}
+								<figcaption>
+									<p class="js-carouselItemCaption">{{ include.image1_description }}</p>
+								</figcaption>
+							{% endif %}
 						</li>
 					{% endif %}
 					{% if include.image2 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image2 }}">
-							<figcaption>
-								<p class="js-carouselItemCaption">{{ include.image2_description }}</p>
-							</figcaption>
+							{% if include.image2_description %}
+								<figcaption>
+									<p class="js-carouselItemCaption">{{ include.image2_description }}</p>
+								</figcaption>
+							{% endif %}
 						</li>
 					{% endif %}
 					{% if include.image3 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image3 }}">
-							<figcaption>
-								<p class="js-carouselItemCaption">{{ include.image3_description }}</p>
-							</figcaption>
+							{% if include.image3_description %}
+								<figcaption>
+									<p class="js-carouselItemCaption">{{ include.image3_description }}</p>
+								</figcaption>
+							{% endif %}
 						</li>
 					{% endif %}
 					{% if include.image4 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image4 }}">
-							<figcaption>
-								<p class="js-carouselItemCaption">{{ include.image4_description }}</p>
-							</figcaption>
+							{% if include.image4_description %}
+								<figcaption>
+									<p class="js-carouselItemCaption">{{ include.image4_description }}</p>
+								</figcaption>
+							{% endif %}
 						</li>
 					{% endif %}
 					{% if include.image5 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image5 }}">
-							<figcaption>
-								<p class="js-carouselItemCaption">{{ include.image5_description }}</p>
-							</figcaption>
+							{% if include.image5_description %}
+								<figcaption>
+									<p class="js-carouselItemCaption">{{ include.image5_description }}</p>
+								</figcaption>
+							{% endif %}
 						</li>
 					{% endif %}
 				</ul>
