allow for absolute positioned images for masonry

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,6 +1,6 @@
 <figure class="image-figure {% if include.style %}figure--{{include.style}}{% endif %}">
-	<div class="figure-content">
-		<img class="js-imageZoom" src="{{ include.url }}" alt="{{ include.description }}" {% if include.style %}width="{{include.width}}"{% endif %}>
+	<div class="figure-content {% if include.height %}figure-content--paddingBottom{% endif %}" {% if include.height %}style="padding-bottom: {{include.height}}%"{% endif %}>
+		<img class="js-imageZoom" src="{{ include.url }}" alt="{{ include.description }}" {% if include.width %}width="{{include.width}}"{% endif %}>
 	</div>
 	{% if include.description %}
 		<figcaption>
