--- a/_sass/2_components/figure.scss
+++ b/_sass/2_components/figure.scss
@@ -19,6 +19,9 @@ figure {
 	.figure-content {
 		padding: 0;
 	}
+  figcaption {
+    margin-top: $spacing-xs;
+  }
 }
 
 .figure--swap {
@@ -67,6 +70,17 @@ figcaption {
 		width: 100%;
 		height: 100%;
 	}
+}
+
+.figure-content--paddingBottom {
+  position: relative;
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 
 @media (min-width: $media-lg) {
