--- a/_sass/2_components/defaults.scss
+++ b/_sass/2_components/defaults.scss
@@ -16,6 +16,11 @@ ul.list-styled {
 	
 
 }
+hr {
+  border: none;
+  border-top: 1px solid rgba($text-dark, 0.2);
+  margin-top: 1.5em;
+}
 a {
 	color: $blue;
 	padding: 1px 2px 2px;
